fixed firefox issue for signin page

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -82,6 +82,7 @@
                     line-height: 22px;
                     a {
                         color: @quiz-link-color1;
+                        text-decoration: underline;
                     }
                 }
             }
