--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
@@ -294,18 +294,28 @@
         .box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12));
         &.setting-bg {
             background: @profile-color !important;
-            i {
-                color: #fff;
-            }
-            &:focus, &:active, &:hover {
-                background: @profile-color;
-            }
-        }
-        &:hover, &:active, &:focus {
-            background: @profile-color !important;
             .transform(scale(1.2));
             i {
-                color: @color-white;
+                color: @color-white;;
+            }
+             &:hover {
+                background: @profile-color;
+            }
+            &:focus {
+            background: @profile-color !important;
+                i{
+                    color: @color-white; 
+                }
+            }
+        }
+        &:hover{
+          .transform(scale(1.2));
+          background: @profile-color;
+        }
+        &:focus {
+            background: #F7F7F7 !important;
+            i{
+                color: @dashboard-color;
             }
         }
     }
