fixed all the best div going out of window issue

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3254,6 +3254,11 @@ lesshat-selector {
 .teacher-app #quiz-details-region > div .grid .grid-body .summary-section span.text-danger {
   color: #D82A07 !important;
 }
+@media only screen and (max-width: 1024px) {
+  #myCanvas-miki {
+    float: none;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   #myCanvas-miki .cbp_tmtimeline > li .contentPiece .cbp_tmlabel {
     margin: 0 0 55px 28%;
