fixed admin video boxes issue for content peice

--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -2780,3 +2780,7 @@ select:before {
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
   margin-left: 0;
 }
+
+.media_times > input[type="text"] {
+  width: 100%;
+}
