--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -663,6 +663,18 @@ select{
 	height: 100%;
 }
 
+
+//Fixed admin content peice video start and end time textbox fixes.
+
+.media_times{
+	& > input[type="text"]{
+		width: 100%;
+	}
+}
+
+
+
+
 // #all-media-region .ui-selectee a {
 // 	border: 2px solid #ddd;
 // }
