--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -3107,5 +3107,10 @@ select:before {
   width: 100%;
   height: 100%;
 }
+
+.media_times > input[type="text"] {
+  width: 100%;
+}
+
 a.browse-content-pieces-item{height:160px;}
 /*# sourceMappingURL=custom.css.map */
