--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -19,10 +19,13 @@
 // CUSTOM FONTS REQUIRED FOR SITE(OPEN-SANS) -----------
 // ---------------------------
 
+
 @font-face {
-    font-family: 'open-sans';
-    src: url('../fonts/OpenSans-Regular.ttf');
+  font-family: 'open-sans';
+  src: url('../fonts/OpenSans-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/OpenSans-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
 }
+
 
 
 // ---------------------------
