added animation mixin

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -691,27 +691,34 @@ nav {
     }
 }
 
-//loadar animation
-
-@-webkit-keyframes nprogress-spinner {
-    0% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-@keyframes nprogress-spinner {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
 
 
+// ---------------------------
+// LOADER ANIMATION -----------
+// ---------------------------
+
+.keyframes(~'nprogress-spinner, 0%{ transform:rotate(0); } 100%{ transform:rotate(360deg);} ');
+
+
+
+
+// @-webkit-keyframes nprogress-spinner {
+//     0% {
+//         -webkit-transform: rotate(0deg);
+//     }
+//     100% {
+//         -webkit-transform: rotate(360deg);
+//     }
+// }
+
+// @keyframes nprogress-spinner {
+//     0% {
+//         transform: rotate(0deg);
+//     }
+//     100% {
+//         transform: rotate(360deg);
+//     }
+// }
 
 
 
