--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -488,23 +488,10 @@ nav.wallnut-nav .walnut-account > li > a:focus {
 .nprogress-custom-parent #nprogress .bar {
   position: absolute;
 }
-@-webkit-keyframes nprogress-spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@keyframes nprogress-spinner {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+lesshat-selector {
+  -lh-property: 0; } 
+@-webkit-keyframes nprogress-spinner{ 0%{ -webkit-transform:rotate(0); } 100%{ -webkit-transform:rotate(360deg);} }
+@keyframes nprogress-spinner{ 0%{-webkit-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0); } 100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);} ;
 }
 .direction {
   display: -webkit-box;
