--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-screen.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-screen.less
@@ -129,6 +129,22 @@
     }
 }
 
+
+// ---------------------------
+// FIREFOX FONT WEIGHT FIX FOR SUBJ-LECTURE DETAILS -----------
+// ---------------------------
+@-moz-document url-prefix() { 
+    .l-q-cards {
+        &__title {
+            font-weight: lighter;
+        }
+    }
+}
+
+
+
+
+
 // ---------------------------
 // Sidebar spacing -----------
 // ---------------------------
