--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -70,7 +70,7 @@ h1, h2, h3, h4, h5 {
 // ---------------------------
 
 @-moz-document url-prefix() { 
-    h1, h2, h3, h4, h5 {
+    h1, h2, h3, h4, h5, label, body, .semi-bold, .bold{
         font-weight: lighter !important; 
     }
 }
@@ -731,7 +731,7 @@ nav {
     .display(flex);
     .align-items(center);
     .justify-content(flex-start);
-    margin: 25px 0;
+    margin: 10px 0 25px 0;
     border-bottom: 1px solid #eee;
     padding-bottom: 10px;
     .icon {
@@ -777,6 +777,22 @@ nav {
                 font-size: 0.8em;
                 color: @quiz-link-color3;
             }
+        }
+    }
+}
+
+
+
+
+// ---------------------------
+// FIREFIX FIX FOR BACK BUTTON - DIRECTIONS -----------
+// ---------------------------
+
+
+@-moz-document url-prefix() { 
+.direction {
+    .welcome-text {
+        font-weight: lighter;
         }
     }
 }
