--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
@@ -101,7 +101,6 @@
      // ---------------------------
 
      #quiz-details-region {
-         // margin-top: 20px;
          & > div {
              background: #F0F0F0;
              .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
@@ -213,8 +212,29 @@
      }
  }
 
-
-
  .all-d-best{
         margin:30px 0;
  }
+
+
+
+
+
+
+@-moz-document url-prefix() { 
+     .teacher-app {
+         #quiz-details-region {
+             & > div {
+                 .grid {
+                     .grid-body {
+                         h3 {
+                             & > span {
+                                 font-weight: lighter;
+                             }
+                         }
+                     }
+                 }
+             }
+         }
+     }
+}
