--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -48,8 +48,8 @@
         position: absolute;
         width: 100%;
         z-index: 99999;
-        top: -25px;
-        .wrapped {
+        top: -25px;        
+            .wrapped {
             .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
             background: #fff;
             padding: 10px;
@@ -148,6 +148,21 @@
                     padding: 0 5px;
                 }
             }
+        }
+    }
+}
+
+
+
+
+// ---------------------------
+// FIREFOX FIX FOR LOGIN CARD WRAPPER -----------
+// ---------------------------
+
+@-moz-document url-prefix() { 
+    .signin-card {
+        .signin-wrapper {
+            top: -35px;
         }
     }
 }
