--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
@@ -37,7 +37,7 @@
      }
      .direction {
          margin: 0;
-         padding-top: 30px;
+         padding-top: 10px;
      }
      // ---------------------------
      // IF QUIZES ARE ATTEMPTED THEN DETAIL DROPDOWN -----------
@@ -51,7 +51,7 @@
                      margin: 0;
                      .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
                      .grid-title{
-                        padding: 20px 15px;
+                        padding: 0 15px;
                         background: #eee;
                         .tools{
                             & > a{
@@ -80,7 +80,12 @@
                  h4 {
                      font-size: 1.2em;
                      margin: 0;
+                     padding: 20px 0;
+                     width: 98%;
                      color: @quiz-link-color3;
+                 }
+                 .tools{
+                    padding: 20px 0;
                  }
              }
          }
