--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -154,7 +154,6 @@ img{
 
 
 
-
 // ---------------------------
 // CUSTOM NAVBAR STYLES -----------
 // ---------------------------
@@ -219,8 +218,6 @@ nav {
         }
     }
 }
-
-
 
 
 
@@ -298,14 +295,9 @@ nav {
 
 
 
-
-
-
-
- // ---------------------------
+// ---------------------------
 // OVERWRITING PAGE CONENT STYLES TO BRING CONTENT IN CENTER -----------
 // ---------------------------
-
 
 
  .page-content{
@@ -378,7 +370,7 @@ nav {
 
 
 // ---------------------------
-// MODAL STYLES FOR PRACTICE QUIZ ALERTS -----------
+// BOOTBOX MODALS ACCORDING TO THEME DESIGN -----------
 // ---------------------------
 
 
@@ -386,6 +378,9 @@ nav {
 	.modal-body{
 		background: @dashboard-color;
 		color: #fff;
+        .bootbox-close-button{
+            display: none;
+        }
 	}
 	.modal-footer{
 		text-align: center;
