hiden extra lecture text apprearing on video

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
@@ -168,6 +168,11 @@
 					.element-wrapper:first-child{
 						padding:0;
 						margin:2px 0 2px;
+						& > .element-markup{
+							& > .text{
+								display: none;
+							}
+						}
 					}
 					.element-wrapper:last-child{
 						padding: 15px 7px;
