--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -2030,6 +2030,9 @@ lesshat-selector {
   padding: 0;
   margin: 2px 0 2px;
 }
+.lesson #content-board #myCanvas #question-area .element-wrapper:first-child > .element-markup > .text {
+  display: none;
+}
 .lesson #content-board #myCanvas #question-area .element-wrapper:last-child {
   padding: 15px 7px;
   box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.12), 0 4px 2px 0 rgba(0, 0, 0, 0.12);
