Feature- for selecting children account if more than one added a modal popup

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -926,6 +926,54 @@ lesshat-selector {
 .create-ac-card .create-ac-wrapper .wrapped .create-ac button:hover {
   background: #8cc8c6;
 }
+.modal.in {
+  display: -webkit-box !important;
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: rgba(255, 255, 255, 0.3);
+}
+.modal .modal-body {
+  text-align: center;
+  padding: 20px;
+}
+.modal .modal-body h4 {
+  margin: 0;
+  color: #602f1a;
+  text-transform: capitalize;
+}
+.modal .modal-body .child {
+  color: #fff;
+  padding: 10px 0;
+  text-transform: uppercase;
+  width: 30%;
+  border-radius: 5px;
+}
+.modal .modal-body .child.old {
+  background: #69b8b5;
+}
+.modal .modal-body .child.old:hover {
+  background: #8cc8c6;
+}
+.modal .modal-body .child.new {
+  background: #f2593a;
+}
+.modal .modal-body .child.new:hover {
+  background: #f5816a;
+}
+.modal .modal-body form hr {
+  width: 35%;
+  margin: 8px auto;
+  border-color: #B8C1C1;
+}
 .intro {
   padding: 20px;
 }
