--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
@@ -224,6 +224,10 @@
 
 
 
+// ---------------------------
+// MOZILLA LIGHTER FONT FOR QUIZ SUMMARY INFO -----------
+// ---------------------------
+
 
 
 @-moz-document url-prefix() { 
