fixed asterisk issue for select box on create account page

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -877,6 +877,12 @@ lesshat-selector {
   padding-left: 30px;
   color: #602f1a;
 }
+.create-ac-card .create-ac-wrapper .wrapped .student-info .info .sel-mandatory:before,
+.create-ac-card .create-ac-wrapper .wrapped .parents-info .info .sel-mandatory:before {
+  content: '*';
+  font-weight: bold;
+  color: #FF0D00;
+}
 .create-ac-card .create-ac-wrapper .wrapped .student-info .info select,
 .create-ac-card .create-ac-wrapper .wrapped .parents-info .info select {
   margin: 12px 0 0 0;
