--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
@@ -39,6 +39,13 @@
                     color: #602f1a;
                 }
                 .info {
+                    .sel-mandatory{
+                        &:before{
+                            content: '*';
+                            font-weight: bold;
+                            color: #FF0D00;
+                        }
+                    }
                      select {
                         margin: 12px 0 0 0;
                         padding: 11px 0;
