--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
@@ -92,45 +92,47 @@
 // ---------------------------
 
 
-.modal{
-    &.in{
-        display: flex !important;
-        align-items:center;
-        justify-content:center;
-        background: rgba(255,255,255,0.3);
-    }
-    .modal-body{
-        text-align: center;
-        padding: 20px;
-        h4{
-            margin: 0;
-            color: @quiz-link-color3;
-            text-transform: capitalize;
+#walnut-modal{
+    &.modal{
+        &.in{
+            display: flex !important;
+            align-items:center;
+            justify-content:center;
+            background: rgba(255,255,255,0.3);
         }
-        .child{
-            color: #fff;
-            padding: 10px 0;
-            text-transform: uppercase;
-            width: 30%;
-            border-radius: 5px;
-            &.old{
-                background: @button-2-theme;
-                &:hover{
-                    background: lighten(@button-2-theme, 10%);
-                }
+        .modal-body{
+            text-align: center;
+            padding: 20px;
+            h4{
+                margin: 0;
+                color: @quiz-link-color3;
+                text-transform: capitalize;
             }
-            &.new{
-                background: @button-1-danger;
-                &:hover{
-                    background: lighten(@button-1-danger, 10%);
+            .child{
+                color: #fff;
+                padding: 10px 0;
+                text-transform: uppercase;
+                width: 30%;
+                border-radius: 5px;
+                &.old{
+                    background: @button-2-theme;
+                    &:hover{
+                        background: lighten(@button-2-theme, 10%);
+                    }
                 }
-            }            
-        }
-        form{
-            hr{
-                width: 35%;
-                margin:8px auto;
-                border-color: #B8C1C1;
+                &.new{
+                    background: @button-1-danger;
+                    &:hover{
+                        background: lighten(@button-1-danger, 10%);
+                    }
+                }            
+            }
+            form{
+                hr{
+                    width: 35%;
+                    margin:8px auto;
+                    border-color: #B8C1C1;
+                }
             }
         }
     }
