Resolved admin issues for view quizes and video lecture page

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -4,19 +4,12 @@
     <a id="accordionToggle" data-toggle="collapse" href="#collapseView" aria-expanded="true" aria-controls="collapseView" style="display:block; color:#000" class="h6">
     Expand        
     </a>
-<!--         <div class="submit2">
-        {{#allow_submit_answer}}   
-           <button type="button" id="submit-question" class="btn btn-success">
-                Submit <i class="fa fa-forward"></i> 
-            </button>
-        {{/allow_submit_answer}}        
-    </div> -->
 </div>
 
 <div id="collapseView" class="panel-collapse collapse">
-        
-    <!--  -->
-    <!-- {{#practice_mode}}
+       
+    <div class="admin-side">
+    {{#practice_mode}}
         <div class="well text-center">
             <h4><span class="bold">This is a practice quiz.
                 It is designed to help you train for the class tests.</span></h4>
@@ -71,9 +64,8 @@
     		<div class="row">
         	</div>
     	</div>
-    </div> -->
-    <!--  -->
-
+    </div> 
+</div>
 
 <!-- Added external code as per latest design and commented old code used -->
 
