--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -2381,7 +2381,8 @@ lesshat-selector {
     font-weight: lighter;
   }
 }
-.quizComment {
+.quizComment,
+.admin-side {
   display: none;
 }
 @media (max-width: 1200px) {
