--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -17,7 +17,7 @@
  // EXPAND SECTION HIDDEN -----------
  // ---------------------------
 
-.quizComment{
+.quizComment,.admin-side{
 	display: none;
 }
 
