--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -32,3 +32,29 @@
     padding: 7px;
     min-width: inherit;
 }
+
+
+
+
+/* ---------------------------
+   ADMIN CONTENT PIECE AND QUIZ/LECTURE FIXES -----------
+ ---------------------------
+*/
+
+
+.all-d-best,.direction,.submit2,.quiz-stats,.new-design{
+	display: none;
+}
+
+.admin-side{
+	display: block;
+}
+
+#question-display-region > div .container-grey,.quiz-info{
+	text-align: center;
+}
+
+
+#question-display-region > div #skip-question{
+	padding: 10px 18px;
+}
