--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/content-display/templates/content-display-item.html
@@ -1,5 +1,5 @@
 {{#isContentPiece}}
-<div class="contentPiece" id="timeline_lecture" data-type="content-piece" data-id="{{ID}}">
+<div class="contentPiece new-design" id="timeline_lecture" data-type="content-piece" data-id="{{ID}}">
 
     <div class="cbp_tmicon info animated bounceIn">     <time class="cbp_tmtime" datetime="">
         <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
@@ -17,6 +17,28 @@
     </div>
     </div>
 </div>
+
+
+<div class="contentPiece admin-side" data-type="content-piece" data-id="{{ID}}">
+    <time class="cbp_tmtime" datetime="">
+        <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
+    </time>
+    <div class="cbp_tmicon info animated bounceIn"> <span class="fa"></span> </div>
+    <div class="cbp_tmlabel view" style="cursor:pointer">
+            <div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
+              <h4 class="m-t-5 m-b-5"><a class="text-grey semi-bold question_link">{{&post_excerpt}}</a> </h4>
+            </div>
+            <div class="clearfix"></div>
+    <div class="tiles grey p-t-10 p-b-10 p-l-20">
+        <div class="muted">
+            <span class="bold question-type-div">Question Type:</span> <span class="question-type-div"> {{question_type}}</span>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    </div>
+</div>
+
+
 {{/isContentPiece}}
 {{^isContentPiece}}
 <div class="contentPiece" data-type="quiz" data-id="{{id}}">
