quiz instructions block hide if no instructions

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -77,17 +77,14 @@
                 {{/negMarksEnable}}
             </div-->
         </div>
-
+        {{#description.instruction}}
         <div class="row b-grey b-t">
             <div class="col-sm-12">
                 <h3 class="semi-bold"><label class="form-label text-grey">Quiz Instructions</label></h3>
                     {{&description.instruction}}
-                    {{^description.instruction}}
-                        This quiz has no instructions.
-                    {{/description.instruction}}
             </div>
         </div>
-
+        {{/description.instruction}}
     </div>
     
 </div>
