--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -580,6 +580,34 @@ lesshat-selector {
     font-weight: lighter;
   }
 }
+#logout-modal.modal .modal-body {
+  background: #69b8b5;
+  color: #ffffff;
+  padding: 15px;
+}
+#logout-modal.modal .modal-body h4 {
+  margin: 0;
+  font-size: 1em;
+}
+#logout-modal.modal .modal-footer {
+  text-align: center;
+  padding: 15px;
+}
+#logout-modal.modal .modal-footer button {
+  color: #ffffff;
+  border: 0;
+  color: #fff;
+  padding: 8px;
+  width: 20%;
+  text-transform: uppercase;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+}
+#logout-modal.modal .modal-footer button.cancel {
+  background: #f2593a;
+}
+#logout-modal.modal .modal-footer button.confirm {
+  background: #69b8b5;
+}
 .signin-header {
   padding: 15px 0 35px 0;
   text-align: center;
