--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -56,14 +56,14 @@
 
         {{^replay}}
         {{^allow_submit_answer}} 
-        <button type="button" id="next-question" class="btn btn-default btn-sm btn-small">
+        <button type="button" id="next-question" class="btn btn-default btn-sm btn-small" style="color:#AFABAB;border: 2px solid #AFABAB;">
                 Next <i class="fa fa-step-forward"></i>
             </button>
         {{/allow_submit_answer}} 
         {{/replay}}
 
 
-        {{#show_skip_helper_text}} 
+ 
     
 
     {{#allow_submit_answer}}   
@@ -91,7 +91,7 @@
         {{/show_hint}}
 
             <!-- <div><i class="small">(questions once skipped cannot be answered later)</i></div> -->
-        {{/show_skip_helper_text}}
+ 
 
         {{#replay}}
         <div class="replay-actions">
