--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -1,15 +1,15 @@
-<link rel="stylesheet" href="/wp-content/themes/walnut/walnut_student_assets/dev/css/bootstrap.min.css">
-<link rel="stylesheet" href="/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css">
-<link rel="stylesheet" href="/wp-content/themes/walnut/walnut_student_assets/dev/css/font-awesome.min.css">
+<link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/bootstrap.min.css">
+<link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/style.css">
+<link rel="stylesheet" href="./wp-content/themes/walnut/walnut_student_assets/dev/css/font-awesome.min.css">
 
 <header>
     <nav class="navbar navbar-default wallnut-nav">
         <div class="container-fluid signin-header">
             <div class="logo">
-                <img src="/wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-logo.png" class="img-responsive center-block" alt="">
+                <img src="./wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-logo.png" class="img-responsive center-block" alt="">
             </div>
             <div class="slogan">
-                <img src="/wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-tagline.png" class="img-responsive center-block" alt="">
+                <img src="./wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-tagline.png" class="img-responsive center-block" alt="">
             </div>
         </div>
     </nav>
