Modified students profile page

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -90,27 +90,30 @@
                 margin: 10px 0;
                 @media (max-width: 1370px) {
                     margin: 8px 0;
-                }                 
-                i {
-                    padding: 10px 12px;
-                    color: #fff;
-                    font: 0.9em open-sans, arial;
-                    text-transform: uppercase;
-                    &:before {
-                        font-family: fontawesome;
-                        padding-right: 5px;
-                    }
                 }
-                .g-plus {
-                    background: #f2593a;
-                    &:hover {
-                        background: lighten(#f2593a, 10%);
+                ul{ 
+                    padding:0;                
+                    a {
+                        padding: 10px 12px;
+                        color: #fff;
+                        font: 0.9em open-sans, arial;
+                        text-transform: uppercase;
+                        &:before {
+                            font-family: fontawesome;
+                            padding-right: 5px;
+                        }
                     }
-                }
-                .fb {
-                    background: #4260a0;
-                    &:hover {
-                        background: lighten(#4260a0, 10%);
+                    .g-plus {
+                        background: #f2593a;
+                        &:hover {
+                            background: lighten(#f2593a, 10%);
+                        }
+                    }
+                    .fb {
+                        background: #4260a0;
+                        &:hover {
+                            background: lighten(#4260a0, 10%);
+                        }
                     }
                 }
             }
