--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
@@ -15,22 +15,136 @@
 // ---------------------------
 
 
+// .create-ac-card {
+//     position: relative;
+//     .create-ac-wrapper {
+//         position: absolute;
+//         width: 100%;
+//         z-index: 999;
+//         // top: -30px;
+//         top: 56px;
+//         margin-bottom: 30px;
+//         font-family: open-sans;
+//         .wrapped {
+//             .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
+//             background: #fff;
+//             padding: 15px 15px 0 15px;
+//             .account-head {
+//                 text-align: center;
+//                 font-weight: bold;
+//                 color: @quiz-link-color1;
+//             }
+//             .student-info, .parents-info {
+//                 margin-bottom: 15px;
+//                 h5 {
+//                     padding-left: 30px;
+//                     color: #602f1a;
+//                 }
+//                 .info {
+//                     .sel-mandatory{
+//                         &:before{
+//                             content: '*';
+//                             font-weight: bold;
+//                             color: #FF0D00;
+//                         }
+//                     }
+//                      select {
+//                         margin: 12px 0 0 0;
+//                         padding: 11px 0;
+//                         border: 0;
+//                         outline: none;
+//                         border-bottom: 1px solid #ccc;
+//                         width: 82%;
+//                         color: #928E8E;
+//                         background: none;
+//                     }
+//                     .mat-holder{
+//                         margin: 0;
+//                         .mat-label,.mat-input,&:after,&:before{
+//                             width: 80%;
+//                             .mandatory{
+//                                 color: #FF0D00;
+//                                 font-weight: bold;
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//             .create-ac {
+//                 background: #f3f3f3;
+//                 padding: 20px;
+//                 button {
+//                     background: @button-2-theme;
+//                     color: #fff;
+//                     padding: 10px 25px;
+//                     text-transform: uppercase;
+//                     &:hover {
+//                         background: lighten(@button-2-theme, 10%);
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
+
 .create-ac-card {
     position: relative;
     .create-ac-wrapper {
         position: absolute;
         width: 100%;
         z-index: 999;
-        top: -30px;
+        // top: -30px;
+        top: 56px;
         margin-bottom: 30px;
+        font-family: open-sans;
         .wrapped {
             .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
             background: #fff;
-            padding: 15px 15px 0 15px;
+            padding: 15px 0px 0 0px;
+            hr{
+                margin-bottom: 0;
+            }
             .account-head {
                 text-align: center;
                 font-weight: bold;
                 color: @quiz-link-color1;
+            }
+            .panel-group{
+                margin: 0;
+                .panel{
+                    margin-top: 0;
+                    border-top: 0;
+                    border-radius: 0;
+                    .panel-heading{
+                        border-radius: 0;
+                        text-align: center;
+                        padding: 0;
+                        transition: all 0.5s ease-in-out;
+                        &:hover{
+                            background: #D8D4D4;
+                        }
+                        .panel-title{
+                            a{
+                                text-decoration: none;
+                                display: block;
+                                padding: 15px;
+                            }
+                        }
+                    }
+                    .panel-body{
+
+                    }
+                }
+            }
+            .panel-body{
+                padding: 0;
+                .student-alert{
+                    text-align: center;
+                    margin: 0;
+                    padding-top: 20px;
+                    font-size: 1.1em;
+                }
             }
             .student-info, .parents-info {
                 margin-bottom: 15px;
@@ -69,23 +183,50 @@
                 }
             }
             .create-ac {
-                background: #f3f3f3;
-                padding: 20px;
-                button {
-                    background: @button-2-theme;
-                    color: #fff;
-                    padding: 10px 25px;
-                    text-transform: uppercase;
-                    &:hover {
-                        background: lighten(@button-2-theme, 10%);
+                padding: 25px 15px 0 15px;
+                & > div{
+                        background: #f3f3f3;
+                        padding: 20px;
+                    button {
+                        background: @button-2-theme;
+                        color: #fff;
+                        padding: 10px 25px;
+                        text-transform: uppercase;
+                        &:hover {
+                            background: lighten(@button-2-theme, 10%);
+                        }
                     }
+                }
+            }
+            .added_students{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 20px;
+                button{
+                    color: #fff;
+                padding: 10px;
+                margin: 5px;
+                text-transform: uppercase;
+                
+                border-radius: 5px;
+                    &.odd{
+                        background: @button-2-theme;
+                        &:hover{
+                            background: lighten(@button-2-theme, 10%);
+                        }
+                    }
+                    &.even{
+                        background: @button-1-danger;
+                        &:hover{
+                            background: lighten(@button-1-danger, 10%);
+                        }
+                    }   
                 }
             }
         }
     }
 }
-
-
 
 // ---------------------------
 // FOR SELECTING CHILDREN IF MANY -----------
@@ -99,6 +240,7 @@
             align-items:center;
             justify-content:center;
             background: rgba(255,255,255,0.3);
+            font-family: open-sans;
         }
         .modal-body{
             text-align: center;
@@ -137,3 +279,92 @@
         }
     }
 }
+
+
+
+// ---------------------------
+// FOR ADDING MULTIPLE CHILDREN -----------
+// ---------------------------
+
+
+.add-student{
+    font-family: open-sans;
+    .modal-header{
+        color: @quiz-link-color3;
+        text-align: center;
+        text-transform: capitalize;
+    }
+    .modal-body{
+        .student-info{
+            margin-bottom: 15px;
+            padding: 10px;
+            h5 {
+                padding-left: 30px;
+                color: #602f1a;
+            }
+            .info {
+                .sel-mandatory{
+                    &:before{
+                        content: '*';
+                        font-weight: bold;
+                        color: #FF0D00;
+                    }
+                }
+                 select {
+                    margin: 12px 0 0 0;
+                    padding: 11px 0;
+                    border: 0;
+                    outline: none;
+                    border-bottom: 1px solid #ccc;
+                    width: 82%;
+                    color: #928E8E;
+                    background: none;
+                }
+                .mat-holder{
+                    margin: 0;
+                    .mat-label,.mat-input,&:after,&:before{
+                        width: 80%;
+                        .mandatory{
+                            color: #FF0D00;
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .modal-footer{
+            background: #f3f3f3;
+            padding: 20px;
+        button {
+            background: @button-2-theme;
+            color: #fff;
+            padding: 10px 25px;
+            text-transform: uppercase;
+            &:hover {
+                background: lighten(@button-2-theme, 10%);
+            }
+            &.cancel{
+                background: @button-1-danger;
+                &:hover{
+                    background: lighten(@button-1-danger, 10%);
+                }
+            }
+        }
+    }    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
