Added disabled class for panel if parent info not filled

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -1153,6 +1153,9 @@ lesshat-selector {
 .add-student .modal-footer button.cancel:hover {
   background: #f5816a;
 }
+.panel-disabled {
+  pointer-events: none;
+}
 .intro {
   padding: 20px;
 }
