--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
@@ -356,11 +356,13 @@
 
 
 
+// ---------------------------
+// DISABLE STUDENT INFORMATION ONLOAD -----------
+// ---------------------------
 
-
-
-
-
+.panel-disabled{
+    pointer-events: none;
+}
 
 
 
