--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
@@ -146,6 +146,9 @@
                     font-size: 1.1em;
                 }
             }
+            .parents-info{
+                padding: 15px 0;
+            }
             .student-info, .parents-info {
                 margin-bottom: 15px;
                 h5 {
@@ -294,6 +297,7 @@
         text-transform: capitalize;
     }
     .modal-body{
+        padding-top: 0;
         .student-info{
             // margin-bottom: 15px;
             padding: 10px;
